--- a/nori-plugin/src/main/assemblies/plugin.xml
+++ b/nori-plugin/src/main/assemblies/plugin.xml
@@ -1,3 +1,4 @@
+
 <?xml version="1.0"?>
 <assembly>
     <id>plugin</id>
@@ -17,6 +18,8 @@
             <useTransitiveFiltering>true</useTransitiveFiltering>
             <excludes>
                 <exclude>org.elasticsearch:elasticsearch</exclude>
+                <exclude>org.apache.lucene:lucene-core</exclude>
+                <exclude>org.apache.logging.log4j:log4j-core</exclude>
             </excludes>
         </dependencySet>
         <dependencySet>
@@ -24,13 +27,6 @@
             <useTransitiveFiltering>true</useTransitiveFiltering>
             <includes>
                 <include>${project.name}-${project.version}.jar</include>
-            </includes>
-        </dependencySet>
-        <dependencySet>
-            <useProjectArtifact>true</useProjectArtifact>
-            <useTransitiveFiltering>true</useTransitiveFiltering>
-            <includes>
-                <include>com.google.guava:guava</include>
             </includes>
         </dependencySet>
     </dependencySets>
