+ Nori alanlyzer 추가 + git 코드 ( https://github.com/korlucene/argo-nori-analyzer ) + TokenInfoDictionary.java 예외발생으로 코드 변경 + 테스트 케이스 추가 (view 형식)

--- a/pom.xml
+++ b/pom.xml
@@ -5,10 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.elasticsearch</groupId>
-    <artifactId>elasticsearch-example-plugin</artifactId>
+    <artifactId>elasticsearch-plugin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>nori-plugin</module>
+        <module>nori-analyzer</module>
     </modules>
     <packaging>pom</packaging>
     <description>Elasticsearch plugin example</description>
