+ elastic-plugin test코드에서 nori tokenizer, filter 테스

--- a/nori-plugin/src/main/resources/plugin-descriptor.properties
+++ b/nori-plugin/src/main/resources/plugin-descriptor.properties
@@ -1,6 +1,6 @@
 version=${project.version}
 description=${project.description}
 name=test-plugin
-classname=org.elasticsearch.plugin.example.TestPlugin
+classname=org.elasticsearch.plugin.analysis.example.TestPlugin
 java.version=1.8
 elasticsearch.version=${elasticsearch.version}
