--- a/nori-plugin/pom.xml
+++ b/nori-plugin/pom.xml
@@ -2,13 +2,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
     <groupId>org.elasticsearch</groupId>
     <artifactId>nori-plugin</artifactId>
     <version>7.9.2</version>
     <packaging>jar</packaging>
-    <description>Elasticsearch plugin example</description>
+    <description>Elasticsearch plugin nori</description>
 
     <properties>
         <elasticsearch.version>7.9.2</elasticsearch.version>
@@ -19,6 +19,14 @@
     </properties>
 
     <dependencies>
+
+        <!-- nori-analyzer module set -->
+        <dependency>
+            <groupId>org.apache.lucene</groupId>
+            <artifactId>nori-analyzer</artifactId>
+            <version>8.4.0</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
