+ java version 11로 변경 ( 1.11은 잘못된 표현 ) + READE.me 내용 추가 + plugin-descriptor.properties 작성 + plugin 배포 및 실행 테스트

--- a/nori-plugin/src/main/assemblies/plugin.xml
+++ b/nori-plugin/src/main/assemblies/plugin.xml
@@ -20,6 +20,8 @@
                 <exclude>org.elasticsearch:elasticsearch</exclude>
                 <exclude>org.apache.lucene:lucene-core</exclude>
                 <exclude>org.apache.logging.log4j:log4j-core</exclude>
+                <!-- nori-analyzer 추가로 인하여 JarHell 방지 -->
+                <exclude>org.apache.lucene:lucene-analyzers-common</exclude>
             </excludes>
         </dependencySet>
         <dependencySet>
