--- a/nori-plugin/pom.xml
+++ b/nori-plugin/pom.xml
@@ -14,7 +14,7 @@
         <elasticsearch.version>7.9.2</elasticsearch.version>
         <lucene.version>8.6.2</lucene.version>
         <org.slf4j.version>1.6.2</org.slf4j.version>
-        <java.version>1.11</java.version>
+        <java.version>11</java.version>
         <maven.compiler.plugin>3.1</maven.compiler.plugin>
     </properties>
 
@@ -27,11 +27,11 @@
             <version>8.4.0</version>
         </dependency>
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
             <version>${lucene.version}</version>
-        </dependency>
+        </dependency>-->
 
         <dependency>
             <groupId>org.elasticsearch</groupId>
