--- a/nori-plugin/src/main/resources/plugin-descriptor.properties
+++ b/nori-plugin/src/main/resources/plugin-descriptor.properties
@@ -1,6 +1,8 @@
 version=${project.version}
 description=${project.description}
+#name=nori-plugin
 name=test-plugin
 classname=org.elasticsearch.plugin.analysis.example.TestPlugin
-java.version=1.8
+#classname=org.elasticsearch.plugin.analysis.nori.NoriDefaultPlugin
+java.version=11
 elasticsearch.version=${elasticsearch.version}
